Fixed playback for fig size, added trajectory figure, added fig to tex source'

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -1141,18 +1141,15 @@ bounds are required for smaller tables.
 \label{fig:}
 \end{figure}
 
-% \begin{figure}
-%   \begin{subfigure}[b]{0.5\textwidth}
-%     \centering
-%     \includegraphics[width=0.8\textwidth]{fig/good_trajectory.eps}
-%   \end{subfigure}
-%   \begin{subfigure}[b]{0.5\textwidth}
-%     \centering
-%     \includegraphics[width=0.8\textwidth]{fig/bad_trajectory.eps}
-%   \end{subfigure}
-% \caption{}
-% \label{fig:trajectory}
-% \end{figure}
+\begin{figure}
+\begin{center}
+  \includegraphics[width=\columnwidth]{fig/trajectory.eps}
+\end{center}
+\caption{A generated trajectory showing the upper and lower bounds on the position of the object}
+\label{fig:trajectory}
+\end{figure}
+
+
 
 
 
