Added hardware setup image in paper

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -1080,6 +1080,15 @@ and the effective rear axle center is the projection of the rotation center onto
 \item simple point finger
 \end{inparaenum}
 
+\begin{figure}
+\begin{center}
+  \includegraphics[width=\columnwidth]{fig/hardware.pdf}
+\end{center}
+\caption{Hardware setup for experiments}
+\label{fig:hardware}
+\end{figure}
+
+
 \section{Experiments}\label{sec:experiments}
 
 \subsection{Comparison of
