Removed Large file hardware.pdf and replaced it with a 300dpi png

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -1094,7 +1094,7 @@ and the effective rear axle center is the projection of the rotation center onto
 
 \begin{figure}
 \begin{center}
-  \includegraphics[width=\columnwidth]{fig/hardware.pdf}
+  \includegraphics[width=\columnwidth]{fig/hardware.png}
 \end{center}
 \caption{Hardware setup for experiments}
 \label{fig:hardware}
