--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -81,7 +81,7 @@ cross/.default={2pt}}
   Object, With Applications to Robotic Pulling}
 
 % You will get a Paper-ID when submitting a pdf file to the conference system
-% \author{Author Names Omitted for Anonymous Review. Paper-ID [add your ID here]}
+\author{Author Names Omitted for Anonymous Review. Paper-ID [65]}
 
 %\author{\authorblockN{Michael Shell}
 %\authorblockA{School of Electrical and\\Computer Engineering\\
@@ -891,8 +891,36 @@ detailed in Subsections \ref{sec:point-in-moment-hull} and
 
 \begin{inparaenum}
 \item Why compute point in moment hull (lots of blah)
+\item What is it used for
+\item 
 \item Extension to convex sets of pressure distributions
+\item 
 \end{inparaenum}
+
+
+
+Recall from Subsection \ref{sec:frictional-envelope} that an angular
+velocity 
+
+feasibility of a given angular velocity 
+
+In the quasi-static model 
+
+Given a support region $R$ and a velocity $\mathbf{v}^+$, with angular
+component $\omega$, at the contact point, the moment hull of $G(R)$ 
+
+Recall from Subsection \ref{sec:frictional-envelope} that the moment
+hull is the set of all feasible centers of pressure and frictional
+moments for a given support region $R$ and velocity $\mathbf{v}^+$.
+
+In the case of pushing with a single contact point, 
+
+
+Under the quasi-static model of pushing, 
+
+The moment hull is the set of all 
+
+The moment hull is the set of all feasible centers of 
 
 Unlike prior methods, 
 
