--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -53,6 +53,7 @@ cross/.default={2pt}}
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{proposition}{Proposition}
+\newtheorem{definition}{Definition}
 \newtheorem{corollary}{Corollary}
 \newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
 \DeclareMathOperator{\sign}{\text{sgn}}
@@ -310,10 +311,10 @@ purposes. First, it defines the notation and terminology used
 throughout our paper. Second, it frames our work in the context of the
 quasi-static theory of planar pushing. Subsection
 \ref{sec:frictional-envelope} summarizes the moment envelope construct
-used for reasoning about frictional torques. This construct is
-particularly relevant for Subsection \ref{sec:point-in-moment-hull},
-which introduces an algorithm that computes the feasibility of a given
-pushed object velocity.
+used for jointly reasoning about pressure and frictional torques. This
+construct is particularly relevant for Subsection
+\ref{sec:point-in-moment-hull}, which introduces an algorithm that
+computes the feasibility of a given pushed object velocity.
 
 % defines the notation used in this paper
 
@@ -352,20 +353,26 @@ pushed object velocity.
   \label{fig:presspull-motion}
 \end{figure}
 
- Planar pulling is a manipulation skill where
-the robot contacts a rigid body at a point and pulls that contact
-point along a trajectory. Here we present a preliminary quasi-static analysis of planar pulling
-subject to friction. \BB{Maybe describe why this is important} 
+In this paper, we treat planar pushing as the manipulation skill where
+the robot contacts a rigid body at a point and pushes (or pulls) that
+fixed contact point along a trajectory.
+% \footnote{We omit, to future
+%   work, the analysis of the cases where the contact point can slip.}.
+Our following presentation of the quasi-static analysis of planar
+pushing follows that of \cite{alexander1993bounds, Mason}. A
+quasi-static analysis seeks to balance contact forces, gravity, and
+other applied forces while neglecting inertial forces \cite{Mason}.
 
-Our presentation follows that of \cite{alexander1993bounds, Mason}.
-
-Let the \textit{generalized velocity} of a planar rigid body be
-$\mathbf{v}^+ = [v_x, v_y, \omega]^T$, where $v_x$ and $v_y$ are the
-linear velocities of a reference point and $\omega$ is the angular
-velocity about that point. Taking the origin as the reference point,
-the velocity of a point $\mathbf{x}$ on the body is then given by
+Let the \textit{generalized velocity}, or \textit{twist}, of a planar
+rigid body be $\mathbf{v}^+ = [v_x, v_y, \omega]^T$, where $v_x$ and
+$v_y$ are the (linear) velocities of a reference point and $\omega$ is
+the angular velocity about that point. Taking the origin as the
+reference point, the velocity of a point $\mathbf{x} = [x_1,x_2]^T$ on
+the body is then given by
 $\mathbf{v}(\mathbf{x}) = [v_x, v_y]^T + \omega\hat{\mathbf{k}} \times
-\mathbf{x}$ \BB{define k} and can be written in matrix notation as
+\mathbf{x}$
+with $\hat{\mathbf{k}} = [0,0,1]^T$, and can be written in matrix
+notation as
 \begin{equation} \label{eq:generalized-velocity}
 \mathbf{v}(\mathbf{x}) = A(\mathbf{x})\mathbf{v}^+,
 \end{equation}
@@ -377,71 +384,95 @@ where
     0 & 1 &  x_1
   \end{bmatrix*}.
 \end{equation}
-%
-\BB{define $x_1$ and $x_2$}
-In this analysis, we choose a coordinate frame such that the origin is
-the contact point and the $y$-axis aligns with the contact point
-velocity (see Figure \ref{fig:presspull-motion} for an example). Then
-the total frictional force and moment of the body at the origin are
+\EH{Define conversion between twist and rotation center.}  We choose a
+coordinate frame such that the origin is the contact point and the
+$y$-axis aligns with the contact point velocity (see Figure
+\ref{fig:presspull-motion} for an example). The contact point is
+assumed to be pushed with unit speed. Assuming Coulomb's law of
+sliding friction, the total frictional force and moment of the body at
+the origin are
 \begin{align}
   % Force
   % \mathbf{f}_f &= -\mu\,\sign(\dot{\theta})\,\mathbf{\hat{k}}\,\times\int_{R}\frac{\mathbf{r}-\mathbf{r_{\text{IC}}}}{\lVert \mathbf{r}-\mathbf{r_{\text{IC}}} \rVert} p(\mathbf{r}) dA \\
-  \mathbf{f}_f &= -\mu\int_{R}\frac{A(\mathbf{r})\mathbf{v}^+}{\lVert A(\mathbf{r})\mathbf{v}^+ \rVert} p(\mathbf{r}) dA \\
+  \mathbf{f}_f &= -\mu\int_{R}\frac{A(\mathbf{r})\mathbf{v}^+}{\lVert A(\mathbf{r})\mathbf{v}^+ \rVert} p(\mathbf{r}) dA \label{eq:force-at-contact} \\
   % \mathbf{f}_f &= -\mu\int_{R}\frac{\mathbf{v}(\mathbf{r})}{\lVert \mathbf{v}(\mathbf{r}) \rVert} p(\mathbf{r}) dA \\
   % Moment
   % \mathbf{m}_f &= -\mu\,\sign(\dot{\theta}) \int_{R}\mathbf{r}\cdot\frac{\mathbf{r}-\mathbf{r_{\text{IC}}}}{\lVert \mathbf{r}-\mathbf{r_{\text{IC}}} \rVert} p(\mathbf{r}) dA,
   \mathbf{m}_f &= -\mu\int_{R}\mathbf{r}\times\frac{A(\mathbf{r})\mathbf{v}^+}{\lVert A(\mathbf{r})\mathbf{v}^+ \rVert} p(\mathbf{r}) dA, \label{eq:moment-at-contact}
   % \mathbf{m}_f &= -\mu\int_{R}\mathbf{r}\times\frac{\mathbf{v}(\mathbf{r})}{\lVert \mathbf{v}(\mathbf{r}) \rVert} p(\mathbf{r}) dA, \label{eq:moment-at-contact}
 \end{align}
-where $\mu$ is the coefficient of friction, $R$ is the region of the
-rigid body in contact with the plane, \BB{define r} $\mathbf{v}(\mathbf{r})$ is the
-body point velocity given by (\ref{eq:generalized-velocity}) and
-$p(\mathbf{r})$ is a pressure distribution over $R$.
+where $\mu$ is the coefficient of friction (static and dynamic), $R$
+is the region of the rigid body in contact with the plane,
+$\mathbf{v}(\mathbf{r})$ is the body point velocity given by
+(\ref{eq:generalized-velocity}) and $p(\mathbf{r})$ is a pressure
+distribution over $R$.
+% When unspecified, the fixed contact point is assumed to be pushed with
+% unit speed (along the $y$-axis).
+
+When the contact point is pushed at constant velocity, the
+quasi-static assumption states that the total moment at the contact
+point is zero. Because a point contact cannot generate any torque,
+this implies the total frictional moment (\ref{eq:moment-at-contact})
+must also be zero. This leads to the following constraint on the
+possible motions of an object.
+\begin{definition}
+  An angular velocity $\omega$ and its corresponding twist
+  $\mathbf{v}^+ = [0,1,\omega]^T$ are said to be \textbf{feasible} if
+  there exists a pressure distribution $p(\mathbf{r})$ such that the
+  resulting total frictional moment is zero.
+\end{definition} 
+Note that both the angular velocity and its corresponding twist are
+taken with respect to the contact point frame. However, using
+equations (\ref{eq:force-at-contact}) and (\ref{eq:moment-at-contact})
+directly to check feasibility can lead to difficulties when the
+integrand's denominator $\lVert A(\mathbf{r})\mathbf{v}^+\rVert =
+0$. The next formulation obviates that difficulty.
 
 The principle of minimal dissipation states that the motion of the
-pulled body minimizes the instantaneous work dissipated by friction
+pushed body minimizes the instantaneous work dissipated by friction
 \cite{alexander1993bounds}. That is, the motion minimizes the
 following: 
-\begin{equation}
-\begin{aligned}
+\begin{equation} \begin{aligned}
 & \underset{\mathbf{v}^+}{\text{minimize}}
 & & \mu\int_R\lVert A(\mathbf{r})\mathbf{v}^+ \rVert p(\mathbf{r}) dA \\
 & \text{subject to}
 & & \mathbf{v}^+ \in \mathcal{C}.
 \end{aligned} \label{eq:constrained-frictional-dissipation}
 \end{equation}
-Without loss of generality, we take
-$\mathcal{C} = \{[0,1,\omega]^T, \omega \in \mathbb{R}\}$ so that the
-contact point motion is aligned with the coordinate frame. We call the
-objective in (\ref{eq:constrained-frictional-dissipation}) the
-frictional dissipation equation $\mathrm{P}(\mathbf{v}^+)$.
-
-The principle of minimal dissipation is equivalent to the quasi-static
-model of planar sliding with friction \cite{alexander1993bounds}.  In
-fact, the quasi-static model is identical to the first order
-optimality conditions of
+We take $\mathcal{C} = \{[0,1,\omega]^T, \omega \in \mathbb{R}\}$ so
+that the contact point motion is aligned with the coordinate frame. We
+call the objective in (\ref{eq:constrained-frictional-dissipation})
+the \textit{frictional dissipation equation},
+$\mathrm{P}(\mathbf{v}^+)$. The principle of minimal dissipation is
+equivalent to the quasi-static model of planar sliding with friction
+\cite{alexander1993bounds}.  In fact, the quasi-static motion
+constraints are identical to the first order optimality conditions of
 (\ref{eq:constrained-frictional-dissipation}). To see this, take the
 Lagrangian of (\ref{eq:constrained-frictional-dissipation})
 \begin{equation}
-  \mathrm{L}(\mathbf{v}^+,\mathbf{\lambda}) = \mathrm{P}(\mathbf{v}^+) + \lambda_1v^+_1 + \lambda_2(v^+_2-1)
+  \mathrm{L}(\mathbf{v}^+,\mathbf{\lambda}) = \mathrm{P}(\mathbf{v}^+) + \lambda_xv^+_x + \lambda_y(v^+_y-1),
 \end{equation}
-and set gradient of $\mathrm{L}$ with respect to $\mathbf{v}^+$,
+where $\lambda_x$ and $\lambda_y$ are Lagrangian multipliers, and set
+gradient of $\mathrm{L}$ with respect to $\mathbf{v}^+$,
 \begin{equation}
-  \nabla\mathrm{L}(\mathbf{v}^+,\mathbf{\lambda}) = \mu\int_R\frac{A(\mathbf{r})^TA(\mathbf{r})\mathbf{v}^+}{\lVert A(\mathbf{r})\mathbf{v}^+ \rVert} p(\mathbf{r}) dA + \begin{bmatrix}\lambda_1, \lambda_2, 0\end{bmatrix}^T,
+  \nabla\mathrm{L}(\mathbf{v}^+,\mathbf{\lambda}) = \mu\int_R\frac{A(\mathbf{r})^TA(\mathbf{r})\mathbf{v}^+}{\lVert A(\mathbf{r})\mathbf{v}^+ \rVert} p(\mathbf{r}) dA + \begin{bmatrix}\lambda_1, \lambda_2, 0\end{bmatrix}^T, \label{eq:L-grad-zero}
 \end{equation}
-to zero. \BB{possibly define $\lambda$s, though its fairly obvious what they are. Be careful with subscripts for v: 1 and 2 (as above) or x and y as in second paragraph} After some work, we end up with the following first order
-conditions on the force and the moment \BB{Maybe add the derivation of the first order conditions to an appendix and point forward here}
+to zero. When equation \ref{eq:L-grad-zero} is written element-wise,
+we end up with the following first order conditions on the force and
+the moment % \BB{Maybe add the derivation of
+  % the first order conditions to an appendix and point forward here}
 \begin{align}
-  \mathbf{f}_f &= \begin{bmatrix}\lambda_1, \lambda_2\end{bmatrix}^T\\
+  \mathbf{f}_f &= \begin{bmatrix}\lambda_x, \lambda_y\end{bmatrix}^T\\
   \mathbf{m}_f &= 0,
 \end{align}
 that is, the quasi-static motion model.
 
-We prefer the principle of minimal dissipation \BB{prefer to what?} in our theoretical
-analysis \BB{point to a forward section here} because the frictional dissipation equation (\ref{eq:constrained-frictional-dissipation}) is continuous and
-convex in $\mu$, $p(\mathbf{x})$ and $\mathbf{v}^+$.
-
-
+In addition to avoiding the zero denominator issue of equations
+(\ref{eq:force-at-contact}) and (\ref{eq:moment-at-contact}), we
+prefer using the principle of minimal dissipation in the proofs of our
+main results (Section \ref{sec:theory}) because the frictional
+dissipation equation (\ref{eq:constrained-frictional-dissipation}) is
+continuous and convex in $\mathbf{v}^+$.
 
 % \begin{proposition}
 %   When pressing down on a point contact on a rigid body, the center of
@@ -540,7 +571,7 @@ convex hull of $G(R)$ satisfies
 \end{align*}
 Thus, the convex hull of $G(R)$ is the set of all feasible centers of
 pressure and frictional moments for a given support region $R$ and
-velocity $\mathbf{v}^+$.
+twist $\mathbf{v}^+$.
 
 \section{Theory}\label{sec:theory}
 
@@ -1117,13 +1148,13 @@ and the effective rear axle center is the projection of the rotation center onto
 \label{fig:hardware}
 \end{figure}
 
-
 \section{Experiments}\label{sec:experiments}
 \EH{Spin the experiments: We chose experiments that underscore the
   practical benefits of our theoretical contributions.}
 
 \subsection{Comparison of
   Angular Velocity Bounds}\label{sec:bound-comparison}
+
 In this experiment, we compare distance-to-convergence for our exact
 angular velocity bounds and the previous best bound, i.e. the Peshkin
 bound \cite{peshkin1988motion}. We test the bounds over the objects in
@@ -1167,7 +1198,7 @@ converges within $3/4$ a meter, it is serviceable for manipulating the
 MIT objects on a large table. Naturally, smaller objects or tighter
 bounds are required for smaller tables.
 
-\begin{table}
+\begin{table}[t]
   \begin{center}
       \begin{tabular}[c]{cccc}
         \toprule
@@ -1187,6 +1218,8 @@ bounds are required for smaller tables.
   \label{table:convergence-distance}
 \end{table}
 
+
+
 \subsection{Robotic Pulling on a Tabletop}
 To validate the planner, we generated random start and end poses of a rectangular (75mmx50mm) object.
 The object had four possible contact locations for the robot to pull on.
@@ -1199,13 +1232,13 @@ The remaining 77 experiments yeilded an average distance error of 3.9mm (standar
 
 
 
-\begin{figure}
-\begin{center}
-  \includegraphics[width=\columnwidth]{fig/superimposed.eps}
-\end{center}
-\caption{}
-\label{fig:}
-\end{figure}
+% \begin{figure}
+% \begin{center}
+%   \includegraphics[width=\columnwidth]{fig/superimposed.eps}
+% \end{center}
+% \caption{}
+% \label{fig:}
+% \end{figure}
 
 \begin{figure}
 \begin{center}
